--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <ImageButton
+        android:id="@+id/btnImage"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_action_take_photo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintLeft_toRightOf="@id/btnFloating"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_center_line"
         android:layout_width="wrap_content"
