display default bbox

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <RelativeLayout
+        android:id="@+id/bboxLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.8">
+
+        <com.example.bboxphotoapp.BboxView
+            android:id="@+id/bboxView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:id="@+id/imgViewTopLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_adjust_bbox"/>
+
+        <ImageView
+            android:id="@+id/imgViewBottomRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_adjust_bbox"/>
+
+    </RelativeLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnFloating"
         android:layout_width="wrap_content"
@@ -27,6 +56,7 @@
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_action_take_photo"
+        android:contentDescription="@string/btn_btnImage"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
         app:layout_constraintLeft_toRightOf="@id/btnFloating"
