--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,12 +82,26 @@
     <Spinner
         android:id="@+id/classSpinner"
         android:contentDescription="@string/btn_classSpinner"
-        android:layout_width="165dp"
-        android:layout_height="56dp"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btnTakePhoto"
+        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="32dp" 
+        android:layout_marginRight="70dp"/>
+
+    <ImageButton
+        android:id="@+id/btnAddClass"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_action_add_class"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/btn_addClass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="27dp"
+        android:layout_marginLeft="90dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_center_line"
