--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#C8C8C8</color>
     <color name="dark_gray">#838383</color>
+    <color name="blue">#0000FF</color>
 </resources>
