--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,37 @@
 
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_center_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".50"/>
+    
+    <Spinner
+        android:id="@+id/classSpinner"
+        android:contentDescription="@string/btn_classSpinner"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="32dp" 
+        android:layout_marginEnd="70dp"/>
+
+    <ImageButton
+        android:id="@+id/btnAddClass"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_action_add_class"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/btn_addClass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="27dp"
+        android:layout_marginStart="90dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnTakePhoto"
         android:layout_width="wrap_content"
@@ -68,9 +99,9 @@
         android:contentDescription="@string/btn_btnViewImages"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="32dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginEnd="75dp"
         app:layout_constraintLeft_toRightOf="@id/btnTakePhoto"
-        app:layout_constraintRight_toLeftOf="@+id/btnOptionsMenu"/>
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageButton
         android:id="@+id/btnOptionsMenu"
@@ -83,36 +114,5 @@
         android:layout_marginBottom="27dp"
         app:layout_constraintLeft_toRightOf="@id/btnViewImage"
         app:layout_constraintRight_toRightOf="parent"/>
-
-    <Spinner
-        android:id="@+id/classSpinner"
-        android:contentDescription="@string/btn_classSpinner"
-        android:layout_width="130dp"
-        android:layout_height="48dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp" 
-        android:layout_marginRight="70dp"/>
-
-    <ImageButton
-        android:id="@+id/btnAddClass"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/ic_action_add_class"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/btn_addClass"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="27dp"
-        android:layout_marginLeft="90dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/vertical_center_line"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_center_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".50"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
