--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#C8C8C8</color>
     <color name="dark_gray">#838383</color>
+    <color name="darker_gray">#605F5F</color>
     <color name="blue">#0000FF</color>
 </resources>
